src/main/java/com/example/final_project/_core/errors/exception/Exception404.java
package com.example.final_project._core.errors.exception;

public class Exception404 extends RuntimeException {
    public Exception404(String msg) {
        super(msg);
    }
}